--- a/src/seedu/addressbook/ui/DarkTheme.css
+++ b/src/seedu/addressbook/ui/DarkTheme.css
@@ -6,6 +6,7 @@
     -fx-font-weight: bold;
     -fx-text-fill: yellow;
     -fx-control-inner-background: derive(#1d1d1d,20%);
+    -fx-prompt-text-fill: rgba(255, 255, 255, 0.8);
 }
 
 .text-area {
