Implement option to toggle "lights" Toggling "lights" meaning toggling between dark and light themes. This option is found under the toolbar File > Lights On/Off.

--- a/src/seedu/addressbook/ui/mainwindow.fxml
+++ b/src/seedu/addressbook/ui/mainwindow.fxml
@@ -7,13 +7,14 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="center" stylesheets="@/seedu/addressbook/ui/DarkTheme.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seedu.addressbook.ui.MainWindow">
+<VBox alignment="center" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="seedu.addressbook.ui.MainWindow">
 
     <children>
       <MenuBar>
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
+                  <MenuItem fx:id="toggleLights" mnemonicParsing="false" onAction="#onToggleLights" text="Lights On/Off" />
               <MenuItem fx:id="quitProgram" mnemonicParsing="false" onAction="#onClickQuitProgram" text="Quit" />
             </items>
           </Menu>
